--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,39 @@
-    <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-sm-4">
-                        <h3>{{ site.footer.location }}</h3>
-                        <p><a  target="_blank" href="{{ site.address.url }}">
-                          {{ site.address.text }}
-                        </a></p>
-                    </div>
-                    <div class="footer-col col-sm-4">
-                        <h3>{{ site.footer.social }}</h3>
-                        <ul class="list-inline">
-                            {% for network in site.social %}
-                            <li>
-                                <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
-                            </li>
-		                    {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="footer-col col-sm-4">
-                        <h3>{{ site.footer.credits }}</h3>
-                        <p>{{ site.credits }}</p>
-                    </div>
-                </div>
-            </div>
+<!-- Footer -->
+<footer class="text-center">
+  <div class="footer-above">
+    <div class="container">
+      <div class="row">
+        <div class="footer-col col-sm-4">
+          <h3>{{ site.footer.location }}</h3>
+          <p><a target="_blank" href="{{ site.address.url }}">
+            {{ site.address.text }}
+          </a></p>
         </div>
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Copyright &copy; {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}
-                    </div>
-                </div>
-            </div>
+        <div class="footer-col col-sm-4">
+          <h3>{{ site.footer.social }}</h3>
+          <ul class="list-inline">
+            {% for network in site.social %}
+            <li>
+              <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline"><i
+                  class="fa fa-fw fa-{{ network.title }}"></i></a>
+            </li>
+            {% endfor %}
+          </ul>
         </div>
-    </footer>
+        <div class="footer-col col-sm-4">
+          <h3>{{ site.footer.credits }}</h3>
+          <p>{{ site.credits }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-below">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          Copyright &copy; {{ site.footer.copyright }} 20{{ site.time | date: '%y' }}
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
