--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,23 @@
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-profile img-responsive img-circle" src="img/profile.png" alt="">
-                    <div class="intro-text">
-                        <span class="name">{{ site.title }}</span>
-                        <hr class="star-light">
-                        <span class="skills">{{ site.skills }}</span>
-                        <ul class="list-inline">
-                            {% for network in site.social %}
-                            <li>
-                                <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-            </div>
+<!-- Header -->
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <img class="img-profile img-responsive img-circle" src="img/profile.png" alt="">
+        <div class="intro-text">
+          <span class="name">{{ site.title }}</span>
+          <hr class="star-light">
+          <span class="skills">{{ site.skills }}</span>
+          <ul class="list-inline">
+            {% for network in site.social %}
+            <li>
+              <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline"><i
+                  class="fa fa-fw fa-{{ network.title }}"></i></a>
+            </li>
+            {% endfor %}
+          </ul>
         </div>
-    </header>
+      </div>
+    </div>
+  </div>
+</header>
