--- a/_includes/cover_image.html
+++ b/_includes/cover_image.html
@@ -1,2 +1,2 @@
 <!-- Cover Image -->
-<img style="width: 100%;" src="img/cover-paredes.png">
+<img style="width: 100%;" src="/img/cover-paredes.png">
