--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,7 +16,7 @@
             <h2>{{ post.title }}</h2>
             <hr class="star-primary">
             <a target="_blank" href="{{ post.client-link }}">
-              <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+              <img src="/img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
             </a>
             <p>{{ post.description }}</p>
             <ul class="list-inline item-details">
