--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -3,6 +3,9 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
+body {
+  font-family: "Roboto-Regular";
+}
 
 .container {
   max-width: 940px;
@@ -56,7 +59,6 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: Roboto-Medium;
     font-weight: 700;
 }
 
@@ -127,7 +129,6 @@ header img {
 header .intro-text .name {
     display: block;
     text-transform: uppercase;
-    font-family: Roboto-Medium;
     font-size: 1.5em;
     font-weight: 700;
 }
@@ -179,7 +180,6 @@ header .intro-text .skills {
 
 .navbar {
     text-transform: uppercase;
-    font-family: Roboto-Medium;
     font-weight: 700;
 }
 
