--- a/_includes/about.html
+++ b/_includes/about.html
@@ -57,9 +57,12 @@
         {% endfor %}
       </div>
       {% endif %}
-      <div class="col-lg-12 text-center">
-        <a target="_blank" href="{{ site.cv-link }}" class="btn btn-lg btn-outline-content">
-          <i class="fa fa-download"></i> Download my CV
+      <div class="col-lg-12 text-center" >
+        <a target="_blank" href="{{ site.curriculum-vitae-link }}" class="btn btn-lg btn-outline-content" style="width: 250px;">
+          <i class="fa fa-graduation-cap"></i> Curriculum Vitae
+        </a>
+        <a target="_blank" href="{{ site.cover-letter-link }}" class="btn btn-lg btn-outline-content" style="width: 250px;">
+          <i class="fa fa-envelope-open"></i> Cover Letter
         </a>
       </div>
     </div>
