--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -174,11 +174,11 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top .navbar-brand {
-        opacity: 0;
+        display: none;
     }
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
-        opacity: 1;
+        display: block;
     }
 }
 
