--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -10,7 +10,7 @@
 
     <div class="row">
       {% for post in site.posts %}
-      <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 portfolio-item">
+      <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item">
         <a target="_blank" href="{{ post.client-link }}" class="portfolio-link">
           <div class="square" style="background-image: url('/img/portfolio/{{post.img}}');">
             <div class="caption">
