--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,18 +2,18 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="{{ '/js/bootstrap.min.js' }}"></script>
+<script src="{{ '/assets/js/bootstrap.min.js' }}"></script>
 
 <!-- Plugin JavaScript -->
-<script src="{{ '/js/jquery.easing.min.js' }}"></script>
-<script src="{{ '/js/classie.js' }}"></script>
-<script src="{{ '/js/cbpAnimatedHeader.js' }}"></script>
+<script src="{{ '/assets/js/jquery.easing.min.js' }}"></script>
+<script src="{{ '/assets/js/classie.js' }}"></script>
+<script src="{{ '/assets/js/cbpAnimatedHeader.js' }}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ '/js/freelancer.js' }}"></script>
+<script src="{{ '/assets/js/freelancer.js' }}"></script>
 
 <!-- Languaje List JavaScript -->
-<script src="{{ '/js/languages.js' }}"></script>
+<script src="{{ '/assets/js/languages.js' }}"></script>
 
 <!-- Google Analytics -->
-<script src="{{ '/js/analytics.js' }}"></script>
+<script src="{{ '/assets/js/analytics.js' }}"></script>
