--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="row" id="languages-list">
-      <!-- Generated from JS: ./js/languages.js -->
+      <!-- Generated from JS: ./assets/js/languages.js -->
     </div>
   </div>
 </section>
