--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,19 +13,20 @@
       {% if site.about.work %}
       <div class="col-lg-12">
         <h3 class="text-center">Work</h3>
+        <hr class="star-primary">
         {% for work in site.about.work %}
         <div class="about-section">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-2 col-sm-3 col-xs-12">
               <p>{{ work.time }}</p>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10 col-sm-9 col-sm-offset-0 col-xs-11 col-xs-offset-1">
               <p><strong>{{ work.title }}</strong></p>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-9 col-md-offset-3">
+            <div class="col-md-10 col-md-offset-2 col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
               <p>{{ work.company-name}}</p>
             </div>
           </div>
@@ -37,19 +38,20 @@
       {% if site.about.education %}
       <div class="col-lg-12">
         <h3 class="text-center">Education</h3>
+        <hr class="star-primary">
         {% for edu in site.about.education %}
         <div class="about-section">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-2 col-sm-3 col-xs-12">
               <p>{{ edu.time }}</p>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10 col-sm-9  col-sm-offset-0 col-xs-11 col-xs-offset-1">
               <p><strong>{{ edu.degree }}</strong></p>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-9 col-md-offset-3">
+            <div class="col-md-10 col-md-offset-2 col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
               <p>{{ edu.school}}</p>
             </div>
           </div>
