--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -64,41 +64,20 @@ h6 {
 
 hr.star-light,
 hr.star-primary {
-    margin: 10px auto 30px;
+    margin: 10px auto 20px;
     padding: 0;
-    max-width: 250px;
+    max-width: 275px;
     border: 0;
-    border-top: solid 5px;
+    border-top: solid 3px;
     text-align: center;
 }
 
-hr.star-light:after,
-hr.star-primary:after {
-    content: "\f005";
-    display: inline-block;
-    position: relative;
-    top: -.8em;
-    padding: 0 .25em;
-    font-family: FontAwesome;
-    font-size: 2em;
-}
-
 hr.star-light {
-    border-color: #fff;
-}
-
-hr.star-light:after {
-    color: #fff;
-    background-color: #{{ site.color.primary }};
+    border-color: white;
 }
 
 hr.star-primary {
     border-color: #{{ site.color.secondary }};
-}
-
-hr.star-primary:after {
-  color: #{{ site.color.secondary }};
-  background-color: #fff;
 }
 
 .img-centered {
