--- a/_includes/css/section.css
+++ b/_includes/css/section.css
@@ -1,5 +1,5 @@
 section {
-    padding: 50px 0;
+    padding: 6% 0;
 }
 
 section h2 {
@@ -14,14 +14,4 @@ section.success {
 
 .panel-body {
     color: #{{ site.color.secondary }};
-}
-
-@media(max-width:767px) {
-    section {
-        padding: 75px 0;
-    }
-
-    section.first {
-        padding-top: 75px;
-    }
 }
