--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,13 +25,21 @@
         </li>
 
         <li class="page-scroll">
+          <a href="#work">Work</a>
+        </li>
+
+        <li class="page-scroll">
+          <a href="#education">Education</a>
+        </li>
+
+        <li class="page-scroll">
           <a href="#portfolio">Portfolio</a>
         </li>
 
         <li class="page-scroll">
           <a href="#languages">Languages</a>
         </li>
-        
+
       </ul>
     </div>
     <!-- /.navbar-collapse -->
