--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
     {% include nav.html %}
     {% include header.html %}
     {% include about.html %}
-    {% include portfolio_grid.html %}
+    {% include work.html %}
+    {% include education.html %}
+    {% include portfolio-grid.html %}
     {% include languages.html %}
     {% include footer.html %}
     {% include js.html %}
