--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -7,8 +7,12 @@
         <hr class="star-primary">
       </div>
     </div>
-    <div class="row" id="languages-list">
-      <!-- Generated from JS: ./assets/js/languages.js -->
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="languages-list">
+          <!-- Generated from JS: ./assets/js/languages.js -->
+        </div>
+      </div>
     </div>
   </div>
 </section>
