--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -84,15 +84,29 @@ hr.star-primary {
     margin: 0 auto;
 }
 
+
 .img-profile {
-    max-height: 30vh;
-    max-width: 30vh;
     background: url(/assets/img/profile.jpeg) no-repeat;
     background-position: center center;
     background-size: cover;
-    width: 100vh;
-    height: 100vh;
+    height: 35vh;
+    width: 35vh;
 }
+@media only screen and (min-width: 768px) {
+    /* For mobile phones: */
+    .img-profile {
+      width: 40vh;
+      height: 40vh;
+    }
+}
+@media only screen and (min-width: 1400px) {
+    /* For mobile phones: */
+    .img-profile {
+      width: 50vh;
+      height: 50vh;
+    }
+}
+
 
 .btn-social {
     display: inline-block;
