--- a/_includes/portfolio-grid.html
+++ b/_includes/portfolio-grid.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="row">
-      {% for post in site.posts %}
+      {% for post in site.categories.portfolio %}
       <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item">
         <a target="_blank" href="{{ post.client-link }}" class="portfolio-link">
           <div class="square" style="background-image: url('/assets/img/portfolio/{{post.img}}');">
